# lab07

./: CMakeLists.txt  README.md
.github/workflows/: TGZ.yml  ZIP.yml  binary.yml  formatter.yml  release.yml
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build1/formatter_ex_lib/: Makefile  cmake_install.cmake
build1/formatter_lib/: Makefile  cmake_install.cmake
build1/hello_world_application/: Makefile
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/formatter_ex_lib/: Makefile
build2/formatter_lib/: Makefile
build2/hello_world_application/: Makefile  cmake_install.cmake
build2/solver_application/: Makefile  cmake_install.cmake
build2/solver_lib/: Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
